--- a/deliverable4_soln_current.ipynb
+++ b/deliverable4_soln_current.ipynb
@@ -73,7 +73,7 @@
     "    I_to_R = gamma * I[t]\n",
     "    S.append(S[t] - S_to_I)\n",
     "    I.append(I[t] + S_to_I - I_to_R)\n",
-    "    R.append(S[t] + I_to_R) "
+    "    R.append(R[t] + I_to_R) "
    ]
   },
   {
@@ -715,13 +715,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\afarahat\\AppData\\Local\\Temp\\ipykernel_29680\\3233856748.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\afarahat\\AppData\\Local\\Temp\\ipykernel_10592\\3233856748.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"alpha_first\"] = df.apply(lambda x: min(str(x[\"From station name\"]), str(x[\"To station name\"])),\n",
-      "C:\\Users\\afarahat\\AppData\\Local\\Temp\\ipykernel_29680\\3233856748.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\afarahat\\AppData\\Local\\Temp\\ipykernel_10592\\3233856748.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
